# aurum

./: .gitignore  CLAUDE.md  README.md  conftest.py  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  terraform.yml
.sonarlint/: connectedMode.json
configs/: ohlcv_1d.yaml  ohlcv_1min.yaml
docs/: TECHNICAL_SPEC.md  cicd.md  data-dictionary.md  datasource-framework.md  edgar-incremental-ingestion.md  infra-as-code.md
docs/superpowers/specs/: 2026-07-12-ohlcv-incremental-ingestion-design.md  2026-07-12-ohlcv-ingest-log-design.md  2026-07-13-datasource-framework-design.md
nbs/: exploration.ipynb
nbs/yfinance/: chart_validation.ipynb  edgar_qualitative_data.ipynb  stock_market_data.ipynb
src/core/: config.py  errors.py  interfaces.py  schemas.py  sinks.py  state.py
src/datasources/apis/: api_ds.py
src/datasources/apis/yahoo/: batch_ds.py  config.py  ohlcv_ds.py  realtime_ds.py  schemas.py  symbols.py
src/pipelines/: ohlcv_daily.py
tests/: fakes.py  test_core_errors.py  test_core_interfaces.py  test_core_schemas.py  test_core_sinks.py  test_core_state.py  test_ohlcv_incremental.py  test_pipeline_ohlcv.py  test_yahoo_config.py  test_yahoo_ohlcv_ds.py  test_yahoo_schemas.py  test_yahoo_symbols.py
