[project]
name = "aurum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.4",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "pytest>=8.0",
    "jupyter>=1.1.1",
    "plotly>=6.9.0",
]
